--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,8 @@ stages:
 build_project:
   stage: build
   script:
-    - xcodebuild clean -project ProjectName.xcodeproj -scheme SchemeName | xcpretty
-    - xcodebuild test -project ProjectName.xcodeproj -scheme SchemeName -destination 'platform=iOS Simulator,name=iPhone 8,OS=11.3' | xcpretty -s
+    - xcodebuild clean -project RxMVVM.xcodeproj -scheme SchemeName | xcpretty
+    - xcodebuild test -project RxMVVM.xcodeproj -scheme SchemeName -destination 'platform=iOS Simulator,name=iPhone 8,OS=11.3' | xcpretty -s
   tags:
     - ios_11-3
     - xcode_9-3
@@ -17,13 +17,13 @@ build_project:
 archive_project:
   stage: archive
   script:
-    - xcodebuild clean archive -archivePath build/ProjectName -scheme SchemeName
-    - xcodebuild -exportArchive -exportFormat ipa -archivePath "build/ProjectName.xcarchive" -exportPath "build/ProjectName.ipa" -exportProvisioningProfile "ProvisioningProfileName"
+    - xcodebuild clean archive -archivePath build/RxMVVM -scheme SchemeName
+    - xcodebuild -exportArchive -exportFormat ipa -archivePath "build/RxMVVM.xcarchive" -exportPath "build/RxMVVM.ipa" -exportProvisioningProfile "ProvisioningProfileName"
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   artifacts:
     paths:
-      - build/ProjectName.ipa
+      - build/RxMVVM.ipa
   tags:
     - ios_11-3
     - xcode_9-3
