Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,8 +11,8 @@ build_project:
     - xcodebuild test -project RxMVVM.xcodeproj -scheme SchemeName -destination 'platform=iOS Simulator,name=iPhone 8,OS=11.3' | xcpretty -s
   tags:
     - ios_11-3
-    - xcode_9-3
-    - macos_10-13
+    - xcode_12-5-1
+    - macos_11-3-1
 
 archive_project:
   stage: archive
@@ -26,5 +26,5 @@ archive_project:
       - build/RxMVVM.ipa
   tags:
     - ios_11-3
-    - xcode_9-3
-    - macos_10-13
+    - xcode_12-5-1
+    - macos_11-3-1
