--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,15 +12,15 @@ build_project:
   tags:
     - master
 
-archive_project:
-  stage: archive
-  script:
-    - xcodebuild clean archive -archivePath build/RxMVVM -scheme RxMVVM
-    - xcodebuild -exportArchive -exportFormat ipa -archivePath "build/RxMVVM.xcarchive" -exportPath "build/RxMVVM.ipa" -exportProvisioningProfile "ProvisioningProfileName"
-  rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-  artifacts:
-    paths:
-      - build/RxMVVM.ipa
-  tags:
-    - stable
+# archive_project:
+#   stage: archive
+#   script:
+#     - xcodebuild clean archive -archivePath build/RxMVVM -scheme RxMVVM
+#     - xcodebuild -exportArchive -exportFormat ipa -archivePath "build/RxMVVM.xcarchive" -exportPath "build/RxMVVM.ipa" -exportProvisioningProfile "ProvisioningProfileName"
+#   rules:
+#     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+#   artifacts:
+#     paths:
+#       - build/RxMVVM.ipa
+#   tags:
+#     - stable
