--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ stages:
 before_script:
   - pod install
 
-build_project:
+build:
   stage: build
   script:
     - xcodebuild clean -workspace "RxMVVM.xcworkspace" -scheme "RxMVVM" | xcpretty
@@ -16,11 +16,12 @@ build_project:
   tags:
     - master
 
-archive_project:
+release:
   stage: archive
   script:
     - xcodebuild clean archive -archivePath build/RxMVVM -scheme RxMVVM
     - xcodebuild -exportArchive -exportFormat ipa -archivePath "build/RxMVVM.xcarchive" -exportPath "build/RxMVVM.ipa" -exportProvisioningProfile "ProvisioningProfileName"
+    - fastlane release
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   artifacts:
