--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 stages:
   - build
   - test
-  - archive
+  - release
   - deploy
 
 # before_script:
@@ -10,14 +10,13 @@ stages:
 build:
   stage: build
   script:
-    - xcodebuild clean -project "RxMVVM.xcodeproj" -scheme "RxMVVM" | xcpretty
-    - xcodebuild test -project "RxMVVM.xcodeproj" -scheme "RxMVVM" -destination 'platform=iOS Simulator,name=iPhone 12,OS=14.5' | xcpretty -s
-
+  - xcodebuild clean -project RxMVVM.xcodeproj -scheme RxMVVM | xcpretty
+    - xcodebuild test -project RxMVVM.xcodeproj -scheme RxMVVM -destination 'platform=iOS Simulator,name=iPhone 12,OS=14.5' | xcpretty -s
   tags:
     - master
 
 release:
-  stage: archive
+  stage: release
   script:
     - xcodebuild clean archive -archivePath build/RxMVVM -scheme RxMVVM
     - xcodebuild -exportArchive -exportFormat ipa -archivePath "build/RxMVVM.xcarchive" -exportPath "build/RxMVVM.ipa" -exportProvisioningProfile "ProvisioningProfileName"
