--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,27 +4,27 @@ stages:
   - release
   - deploy
 
-# before_script:
-#   - pod install
+before_script:
+  - pod install
 
-build:
+build_project:
   stage: build
   script:
-  - xcodebuild clean -project RxMVVM.xcodeproj -scheme RxMVVM | xcpretty
-    - xcodebuild test -project RxMVVM.xcodeproj -scheme RxMVVM -destination 'platform=iOS Simulator,name=iPhone 12,OS=14.5' | xcpretty -s
+    - xcodebuild clean -workspace "RxMVVM.xcworkspace" -scheme "RxMVVM" | xcpretty
+    - xcodebuild test -workspace "RxMVVM.xcworkspace" -scheme "RxMVVM" -destination 'platform=iOS Simulator,name=iPhone 12,OS=14.5' | xcpretty -s
+
   tags:
     - master
 
 release:
   stage: release
   script:
-    - xcodebuild clean archive -archivePath build/RxMVVM -scheme RxMVVM
-    - xcodebuild -exportArchive -exportFormat ipa -archivePath "build/RxMVVM.xcarchive" -exportPath "build/RxMVVM.ipa" -exportProvisioningProfile "ProvisioningProfileName"
-    - fastlane release
-  rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+  - fastlane release
   artifacts:
     paths:
       - build/RxMVVM.ipa
   tags:
     - stable
+  only:
+     - /^release-.*$/
+     - master
