--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ variables:
 
 before_script:
   - pod install
-  - sudo gem install bundler
+  - gem install bundler
   - bundle install
 
 build_project:
