--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ build_project:
     - xcodebuild clean -workspace "RxMVVM.xcworkspace" -scheme "RxMVVM" | xcpretty
     - xcodebuild test -workspace "RxMVVM.xcworkspace" -scheme "RxMVVM" -destination 'platform=iOS Simulator,name=iPhone 12,OS=14.5' | xcpretty -s
   tags:
-    - develop
+    - master
 
 release:
   stage: release
