--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,8 @@ variables:
 
 before_script:
   - pod install
+  - bundle config set --local path 'vendor/bundle'
+  - bundle install
 
 build_project:
   stage: build
