--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,8 +10,9 @@ variables:
 
 before_script:
   - pod install
+  - sudo gem install bundler
   - bundle install
-
+ 
 build_project:
   stage: build
   script:
