--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ build_project:
            -exportFormat ipa \
            -archivePath "build/RxMVVM.xcarchive" \
            -exportPath "build/RxMVVM.ipa" \
-           -exportProvisioningProfile "ProvisioningProfileName"
+           -exportProvisioningProfile "Rust_Adhoc"
   tags:
     - master
 
