--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,13 +18,13 @@ build_project:
   script:
     - xcodebuild clean -workspace "RxMVVM.xcworkspace" -scheme "RxMVVM" | xcpretty
     - xcodebuild test -workspace "RxMVVM.xcworkspace" -scheme "RxMVVM" -destination 'platform=iOS Simulator,name=iPhone 12,OS=14.5' | xcpretty -s
-    - xcodebuild clean archive -archivePath build/RxMVVM \
-                         -scheme RxMVVM
-    - xcodebuild -exportArchive \
-           -exportFormat ipa \
-           -archivePath "build/RxMVVM.xcarchive" \
-           -exportPath "build/RxMVVM.ipa" \
-           -exportProvisioningProfile "Rust_Adhoc"
+    # - xcodebuild clean archive -archivePath build/RxMVVM \
+    #                      -scheme RxMVVM
+    # - xcodebuild -exportArchive \
+    #        -exportFormat ipa \
+    #        -archivePath "build/RxMVVM.xcarchive" \
+    #        -exportPath "build/RxMVVM.ipa" \
+    #        -exportProvisioningProfile "Rust_Adhoc"
   tags:
     - master
 
