--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,14 +17,8 @@ build_project:
   stage: build
   script:
     - xcodebuild clean -workspace "RxMVVM.xcworkspace" -scheme "RxMVVM" | xcpretty
-    - xcodebuild test -workspace "RxMVVM.xcworkspace" -scheme "RxMVVM" -destination 'platform=iOS Simulator,name=iPhone 12,OS=14.5' | xcpretty -s
-    # - xcodebuild clean archive -archivePath build/RxMVVM \
-    #                      -scheme RxMVVM
-    # - xcodebuild -exportArchive \
-    #        -exportFormat ipa \
-    #        -archivePath "build/RxMVVM.xcarchive" \
-    #        -exportPath "build/RxMVVM.ipa" \
-    #        -exportProvisioningProfile "Rust_Adhoc"
+   # - xcodebuild test -workspace "RxMVVM.xcworkspace" -scheme "RxMVVM" -destination 'platform=iOS Simulator,name=iPhone 12,OS=14.5' | xcpretty -s
+    - bundle exec fastlane build
   tags:
     - master
 
@@ -40,3 +34,9 @@ release:
   only:
      - /^release-.*$/
      - develop
+deploy:
+  stage: deploy
+  script:
+  - bundle exec fastlane deploy
+  tags:
+    - master
