--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,15 +9,13 @@ variables:
   LANG: "en_US.UTF-8"
 
 before_script:
-  # - pod install
+  - pod install
   - sudo gem install bundler
   - bundle install
  
 build_project:
   stage: build
   script:
-    # - xcodebuild clean -workspace "RxMVVM.xcworkspace" -scheme "RxMVVM" | xcpretty
-   # - xcodebuild test -workspace "RxMVVM.xcworkspace" -scheme "RxMVVM" -destination 'platform=iOS Simulator,name=iPhone 12,OS=14.5' | xcpretty -s
     - bundle exec fastlane build
   tags:
     - master
