--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,8 +9,8 @@ variables:
   LANG: "en_US.UTF-8"
 
   before_script:
-    - git config --global user.name "Nguyen_Hoang99"
-    - git config --global user.email "hoanguit@gmail.com"
+    - git config --global user.name "$Nguyen_Hoang99"
+    - git config --global user.email "$hoanguit@gmail.com"
 
 build_project:
   stage: build
