--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,8 +8,11 @@ variables:
   LC_ALL: "en_US.UTF-8"
   LANG: "en_US.UTF-8"
   YOUR_PERSONAL_TOKEN: "sCYyAFR8y4x7oyKDzmWy"
-
+  GIT_CI_PASS: "hoanguit_99"
+  GIT_CI_USER: "Nguyen_Hoang99"
+  CI_PROJECT_PATH: "RxMVVM"
 before_script:
+    - git remote set-url origin https://$GIT_CI_USER:$GIT_CI_PASS@gitlab.com/$CI_PROJECT_PATH.git
     - git config --global user.name "Nguyen_Hoang99"
     - git config --global user.email "hoanguit@gmail.com"
 
@@ -17,9 +20,6 @@ build_project:
   stage: build
   script:
     - bundle exec fastlane test
-    - git remote add https-origin https://gitlab-ci-token:${YOUR_PERSONAL_TOKEN}@gitlab.com:Nguyen_Hoang99/RxMVVM.git
-    - git tag develop
-    - git push https-origin -o ci.skip refs/tags/develop
   tags:
     - master
 
