--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ variables:
   YOUR_PERSONAL_TOKEN: "sCYyAFR8y4x7oyKDzmWy"
   GIT_CI_PASS: "hoanguit_99"
   GIT_CI_USER: "Nguyen_Hoang99"
-  CI_PROJECT_PATH: "RxMVVM"
+  CI_PROJECT_PATH: "Nguyen_Hoang99/RxMVVM"
 before_script:
     - git remote set-url origin https://$GIT_CI_USER:$GIT_CI_PASS@gitlab.com/$CI_PROJECT_PATH.git
     - git config --global user.name "Nguyen_Hoang99"
