--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,11 @@ variables:
   GIT_CI_PASS: "hoanguit_99"
   GIT_CI_USER: "Nguyen_Hoang99"
   CI_PROJECT_PATH: "Nguyen_Hoang99/RxMVVM"
+
+only:
+  - triggers
+  - schedules
+
 before_script:
     - git remote set-url origin https://$GIT_CI_USER:$GIT_CI_PASS@gitlab.com/$CI_PROJECT_PATH.git
     - git config --global user.name "Nguyen_Hoang99"
@@ -22,30 +27,32 @@ build_project:
     - bundle exec fastlane test
   tags:
     - master
-# build_project:
-#   stage: build
-#   script:
-#     - sudo gem install bundler
-#     - bundle install
-#     - bundle exec fastlane build
-#   tags:
-#     - master
 
-# release:
-#   stage: release
-#   script:
-#   - bundle exec fastlane release
-#   artifacts:
-#     paths:
-#       - build/RxMVVM.ipa
-#   tags:
-#     - stable
-#   only:
-#      - /^release-.*$/
-#      - develop
-# deploy:
-#   stage: deploy
-#   script:
-#   - bundle exec fastlane deploy
-#   tags:
-#     - master
+build_project:
+  stage: build
+  script:
+    - sudo gem install bundler
+    - bundle install
+    - bundle exec fastlane build
+  tags:
+    - master
+
+release:
+  stage: release
+  script:
+  - bundle exec fastlane release
+  artifacts:
+    paths:
+      - build/RxMVVM.ipa
+  tags:
+    - stable
+  only:
+     - /^release-.*$/
+     - develop
+     
+deploy:
+  stage: deploy
+  script:
+  - bundle exec fastlane deploy
+  tags:
+    - master
