--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,7 @@ build_project:
     - bundle exec fastlane build
   tags:
     - master
+  when: manual
   only:
     - triggers
     - schedules
@@ -39,6 +40,7 @@ release:
       - build/RxMVVM.ipa
   tags:
     - stable
+  when: manual
   only:
      - triggers
      - schedules
@@ -49,6 +51,7 @@ deploy:
   - bundle exec fastlane deploy
   tags:
     - master
+  when: manual
   only:
     - triggers
     - schedules
