--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ stages:
   - test
   - release
   - deploy
+  - report
   
 variables:
   LC_ALL: "en_US.UTF-8"
@@ -46,5 +47,15 @@ deploy:
     - if: $CI_PIPELINE_SOURCE == "schedule"
   script:
   - bundle exec fastlane deploy mirQa:no
+  tags:
+    - master
+
+report:
+  stage: report
+  needs: [deploy]
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+  script:
+  - bundle exec fastlane report
   tags:
     - master
