--- a/RxMVVM.xcodeproj/xcshareddata/xcschemes/RxMVVM.xcscheme
+++ b/RxMVVM.xcodeproj/xcshareddata/xcschemes/RxMVVM.xcscheme
@@ -27,7 +27,17 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
-      codeCoverageEnabled = "YES">
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "1882060226C6BEFE007E2244"
+            BuildableName = "RxMVVMTests.xctest"
+            BlueprintName = "RxMVVMTests"
+            ReferencedContainer = "container:RxMVVM.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
