--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ xcodeTest:
   stage: test
   rules:
     - if: $CI_PIPELINE_SOURCE == "schedule"
-  script: xcodebuild test -scheme RxMVVM -destination 'platform=iOS Simulator,name=iPhone 6s,OS=12.1'    
+  script: xcodebuild test -scheme RxMVVM 
   tags:
     - master   
 release:
