--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,8 @@ xcodeTest:
   stage: test
   rules:
     - if: $CI_PIPELINE_SOURCE == "schedule"
-  script: xcodebuild test -scheme RxMVVM -destination 'platform=iOS Simulator,name=iPhone X,OS=12.0'
+  script: 
+    - bundle exec fastlane test
   tags:
     - master   
 release:
