--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,8 @@
 stages:
   - build
-  # - release
   - test
-  # - deploy
+  - release
+  - deploy
   - report
   
 variables:
@@ -27,21 +27,22 @@ build_project:
   tags:
     - master
 
-# release:
-#   stage: release
-#   needs: [build_project]
-#   rules:
-#     - if: $CI_PIPELINE_SOURCE == "schedule"
-#   script:
-#   - bundle exec fastlane release
-#   artifacts:
-#     paths:
-#       - build/RxMVVM.ipa
-#   tags:
-#     - stable
+release:
+  stage: release
+  needs: [build_project]
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+  script:
+  - bundle exec fastlane release
+  artifacts:
+    paths:
+      - build/RxMVVM.ipa
+  tags:
+    - stable
 
 xcodeTest:
   stage: test
+  needs: [release]
   rules:
     - if: $CI_PIPELINE_SOURCE == "schedule"
   script: 
@@ -49,15 +50,15 @@ xcodeTest:
   tags:
     - master   
     
-# deploy:
-#   stage: deploy
-#   needs: [release]
-#   rules:
-#     - if: $CI_PIPELINE_SOURCE == "schedule"
-#   script:
-#   - bundle exec fastlane deploy mirQa:no
-#   tags:
-#     - master
+deploy:
+  stage: deploy
+  needs: [xcodeTest]
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+  script:
+  - bundle exec fastlane deploy mirQa:no
+  tags:
+    - master
 
 report:
   stage: report
